y.output

state 0
	$accept: .program $end 

	LINE  shift 3
	.  error

	program  goto 1
	line  goto 2

state 1
	$accept:  program.$end 
	program:  program.line 

	$end  accept
	LINE  shift 3
	.  error

	line  goto 4

state 2
	program:  line.    (1)
	line:  line.goto 

	GOTO  shift 6
	.  reduce 1 (src line 39)

	goto  goto 5

state 3
	line:  LINE.NUMBER number CODE stmt 

	NUMBER  shift 7
	.  error


state 4
	program:  program line.    (2)
	line:  line.goto 

	GOTO  shift 6
	.  reduce 2 (src line 48)

	goto  goto 5

state 5
	line:  line goto.    (23)

	.  reduce 23 (src line 184)


state 6
	goto:  GOTO.number 
	goto:  GOTO.number IF THE JUMP REGISTER IS bit_constant 

	ZERO  shift 10
	ONE  shift 11
	.  error

	bit_constant  goto 9
	number  goto 8

state 7
	line:  LINE NUMBER.number CODE stmt 

	ZERO  shift 10
	ONE  shift 11
	.  error

	bit_constant  goto 9
	number  goto 12

state 8
	number:  number.bit_constant 
	goto:  GOTO number.    (7)
	goto:  GOTO number.IF THE JUMP REGISTER IS bit_constant 

	ZERO  shift 10
	ONE  shift 11
	IF  shift 14
	.  reduce 7 (src line 85)

	bit_constant  goto 13

state 9
	number:  bit_constant.    (5)

	.  reduce 5 (src line 69)


state 10
	bit_constant:  ZERO.    (3)

	.  reduce 3 (src line 58)


state 11
	bit_constant:  ONE.    (4)

	.  reduce 4 (src line 63)


state 12
	number:  number.bit_constant 
	line:  LINE NUMBER number.CODE stmt 

	ZERO  shift 10
	ONE  shift 11
	CODE  shift 15
	.  error

	bit_constant  goto 13

state 13
	number:  number bit_constant.    (6)

	.  reduce 6 (src line 75)


state 14
	goto:  GOTO number IF.THE JUMP REGISTER IS bit_constant 

	THE  shift 16
	.  error


state 15
	line:  LINE NUMBER number CODE.stmt 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 19
	VARIABLE  shift 25
	OPEN  shift 24
	PRINT  shift 20
	READ  shift 21
	.  error

	stmt  goto 17
	expr  goto 18
	expr1  goto 22
	expr2  goto 23
	bit_constant  goto 26

state 16
	goto:  GOTO number IF THE.JUMP REGISTER IS bit_constant 

	JUMP  shift 27
	.  error


state 17
	line:  LINE NUMBER number CODE stmt.    (22)

	.  reduce 22 (src line 178)


state 18
	expr:  expr.NAND expr1 
	stmt:  expr.EQUALS expr 

	NAND  shift 28
	EQUALS  shift 29
	.  error


state 19
	expr1:  THE.ADDRESS OF expr1 
	expr1:  THE.VALUE BEYOND expr1 
	expr1:  THE.VALUE AT expr1 
	stmt:  THE.JUMP REGISTER EQUALS expr 

	JUMP  shift 32
	VALUE  shift 31
	ADDRESS  shift 30
	.  error


state 20
	stmt:  PRINT.bit_constant 

	ZERO  shift 10
	ONE  shift 11
	.  error

	bit_constant  goto 33

state 21
	stmt:  READ.    (21)

	.  reduce 21 (src line 172)


state 22
	expr:  expr1.    (10)

	.  reduce 10 (src line 111)


state 23
	expr1:  expr2.    (14)

	.  reduce 14 (src line 130)


state 24
	expr2:  OPEN.PARENTHESIS expr CLOSE PARENTHESIS 

	PARENTHESIS  shift 34
	.  error


state 25
	expr2:  VARIABLE.number 

	ZERO  shift 10
	ONE  shift 11
	.  error

	bit_constant  goto 9
	number  goto 35

state 26
	expr2:  bit_constant.    (17)

	.  reduce 17 (src line 145)


state 27
	goto:  GOTO number IF THE JUMP.REGISTER IS bit_constant 

	REGISTER  shift 36
	.  error


state 28
	expr:  expr NAND.expr1 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr1  goto 37
	expr2  goto 23
	bit_constant  goto 26

state 29
	stmt:  expr EQUALS.expr 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr  goto 39
	expr1  goto 22
	expr2  goto 23
	bit_constant  goto 26

state 30
	expr1:  THE ADDRESS.OF expr1 

	OF  shift 40
	.  error


state 31
	expr1:  THE VALUE.BEYOND expr1 
	expr1:  THE VALUE.AT expr1 

	AT  shift 42
	BEYOND  shift 41
	.  error


state 32
	stmt:  THE JUMP.REGISTER EQUALS expr 

	REGISTER  shift 43
	.  error


state 33
	stmt:  PRINT bit_constant.    (20)

	.  reduce 20 (src line 164)


state 34
	expr2:  OPEN PARENTHESIS.expr CLOSE PARENTHESIS 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr  goto 44
	expr1  goto 22
	expr2  goto 23
	bit_constant  goto 26

state 35
	number:  number.bit_constant 
	expr2:  VARIABLE number.    (16)

	ZERO  shift 10
	ONE  shift 11
	.  reduce 16 (src line 141)

	bit_constant  goto 13

state 36
	goto:  GOTO number IF THE JUMP REGISTER.IS bit_constant 

	IS  shift 45
	.  error


state 37
	expr:  expr NAND expr1.    (9)

	.  reduce 9 (src line 106)


state 38
	expr1:  THE.ADDRESS OF expr1 
	expr1:  THE.VALUE BEYOND expr1 
	expr1:  THE.VALUE AT expr1 

	VALUE  shift 31
	ADDRESS  shift 30
	.  error


state 39
	expr:  expr.NAND expr1 
	stmt:  expr EQUALS expr.    (18)

	NAND  shift 28
	.  reduce 18 (src line 155)


state 40
	expr1:  THE ADDRESS OF.expr1 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr1  goto 46
	expr2  goto 23
	bit_constant  goto 26

state 41
	expr1:  THE VALUE BEYOND.expr1 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr1  goto 47
	expr2  goto 23
	bit_constant  goto 26

state 42
	expr1:  THE VALUE AT.expr1 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr1  goto 48
	expr2  goto 23
	bit_constant  goto 26

state 43
	stmt:  THE JUMP REGISTER.EQUALS expr 

	EQUALS  shift 49
	.  error


state 44
	expr:  expr.NAND expr1 
	expr2:  OPEN PARENTHESIS expr.CLOSE PARENTHESIS 

	NAND  shift 28
	CLOSE  shift 50
	.  error


state 45
	goto:  GOTO number IF THE JUMP REGISTER IS.bit_constant 

	ZERO  shift 10
	ONE  shift 11
	.  error

	bit_constant  goto 51

state 46
	expr1:  THE ADDRESS OF expr1.    (11)

	.  reduce 11 (src line 117)


state 47
	expr1:  THE VALUE BEYOND expr1.    (12)

	.  reduce 12 (src line 122)


state 48
	expr1:  THE VALUE AT expr1.    (13)

	.  reduce 13 (src line 126)


state 49
	stmt:  THE JUMP REGISTER EQUALS.expr 

	ZERO  shift 10
	ONE  shift 11
	THE  shift 38
	VARIABLE  shift 25
	OPEN  shift 24
	.  error

	expr  goto 52
	expr1  goto 22
	expr2  goto 23
	bit_constant  goto 26

state 50
	expr2:  OPEN PARENTHESIS expr CLOSE.PARENTHESIS 

	PARENTHESIS  shift 53
	.  error


state 51
	goto:  GOTO number IF THE JUMP REGISTER IS bit_constant.    (8)

	.  reduce 8 (src line 92)


state 52
	expr:  expr.NAND expr1 
	stmt:  THE JUMP REGISTER EQUALS expr.    (19)

	NAND  shift 28
	.  reduce 19 (src line 160)


state 53
	expr2:  OPEN PARENTHESIS expr CLOSE PARENTHESIS.    (15)

	.  reduce 15 (src line 136)


27 terminals, 10 nonterminals
24 grammar rules, 54/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 41/30000
26 extra closures
87 shift entries, 1 exceptions
27 goto entries
18 entries saved by goto default
Optimizer space used: output 71/30000
71 table entries, 0 zero
maximum spread: 27, maximum offset: 49
